fix: make the input larger on mobile

--- a/client/src/MobileApp.css
+++ b/client/src/MobileApp.css
@@ -10,6 +10,7 @@
 	position: sticky;
 	top: 0;
 	display: flex;
+	height: 2rem;
 }
 
 .input-container > input {
